force-app/main/default/objects/ApprovalFactor__c/ApprovalFactor__c.object-meta.xml
<CustomObject>
    <label>Approval Factor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>