force-app/main/default/objects/ApprovalFactor__c/fields/ApprovalType__c.field-meta.xml
<CustomField>
    <fullName>ApprovalType__c</fullName>
    <label>Approval Type</label>
    <referenceTo>ApprovalType__c</referenceTo>
    <relationshipLabel>Approval Factor</relationshipLabel>
    <relationshipName>Approval_Factor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>