force-app/main/default/objects/ApprovalFactor__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Approval Factor</relationshipLabel>
    <relationshipName>Approval_Factor</relationshipName>
    <type>Lookup</type>
</CustomField>