force-app/main/default/objects/ApprovalFactor__c/fields/MultiCode__c.field-meta.xml
<CustomField>
    <fullName>MultiCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MultiCode</label>
    <type>Checkbox</type>
</CustomField>