force-app/main/default/objects/ApprovalFactor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApprovalType__c</columns>
    <columns>Company__c</columns>
    <columns>Factor__c</columns>
    <columns>IsActive__c</columns>
    <columns>MultiCode__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Factor__c</field>
        <operation>equals</operation>
        <value>STRATEGY_COMMITTEE</value>
    </filters>
    <label>All</label>
</ListView>